background css update

--- a/homestyle.css
+++ b/homestyle.css
@@ -46,6 +46,8 @@ body{
   background-size: cover;
   background-position: center;
   color: #fff;
+  text-align: center;
+  padding: 140px 0;
    
   
  }
