search box css done

--- a/homestyle.css
+++ b/homestyle.css
@@ -60,3 +60,11 @@ body{
   margin-bottom: 10px;
 
  }
+ .search-box{
+  max-width: 550px;
+  margin: 15px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+ }
