--- a/homestyle.css
+++ b/homestyle.css
@@ -41,7 +41,7 @@ body{
  }
  .hero{
   width: 100%;
-  height: 400px;
+  height: auto;
   background: url(/images/ai-generated-8520388_1920.png);
   background-size: cover;
   background-position: center;
