--- a/homestyle.css
+++ b/homestyle.css
@@ -42,7 +42,7 @@ body{
  .hero{
   width: 100%;
   height: auto;
-  background: url(/images/ai-generated-8520388_1920.png);
+  background: url(/images/cooking-1013455.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
