--- a/homestyle.css
+++ b/homestyle.css
@@ -110,4 +110,7 @@ body{
  .recipe-section{
   width: 90%;
   margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  column-gap: 10px;
  }
