--- a/homestyle.css
+++ b/homestyle.css
@@ -117,4 +117,9 @@ body{
  .recipe-card{
   background: #fff;
   margin: 30px 10px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+ }
+ .recipe-card img{
+  width: 100%;
  }
