--- a/homestyle.css
+++ b/homestyle.css
@@ -124,4 +124,6 @@ body{
   width: 100%;
   height: 200px;
   object-fit: cover;
+   border-top-left-radius: 10px;
+   border-top-right-radius: 10px;
  }
