--- a/homestyle.css
+++ b/homestyle.css
@@ -127,3 +127,7 @@ body{
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
  }
+ .recipe-card h2{
+  font-size: 22px;
+  padding: 20px;
+ }
