--- a/homestyle.css
+++ b/homestyle.css
@@ -151,3 +151,14 @@ body{
   color: #fff;
   text-align: center;
  }
+ .menu-icon{
+  font-size: 24px;
+  padding: 20px;
+  text-align: right;
+  cursor: pointer;
+  display: block;
+ }
+
+ @media only screen and (min-width:768px){
+
+ }
