--- a/homestyle.css
+++ b/homestyle.css
@@ -160,5 +160,12 @@ body{
  }
 
  @media only screen and (min-width:768px){
+  .menu-icon{
+    display: none;
+  }
+  .nav-list{
+    display: block;
+
+  }
 
  }
