--- a/homestyle.css
+++ b/homestyle.css
@@ -174,6 +174,13 @@ body{
 
  }
  @media only screen and (max-width:768px){
+  .hero h2{
+    font-size: 28px;
+
+  }
+  .hero p{
+    font-size: 15px;
+  }
   
 
  }
